Correct font size and padding on mobile styles

--- a/style.css
+++ b/style.css
@@ -126,6 +126,8 @@ a:hover.button, a:active.button{
 #text{
     height: 100%;
     display: flex;
+    padding-left: 16px;
+    padding-right: 16px;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
@@ -165,6 +167,19 @@ footer p{
     #nav-links{
         display: none;
     }
+
+    .content img{
+        max-width: 80%;
+    }
+
+    h2{
+        font-size: 2.8rem;
+    }
+
+    h1{
+        font-size: 10rem;
+    }
+
   }
 
   @media (max-width: 1200px) {
@@ -174,6 +189,10 @@ footer p{
 
     #nav-button{
         display: none;
+    }
+
+    h1{
+        font-size: 11rem;
     }
 
   }
